# ci-migrator

./: README.md  pyproject.toml
ci-migrator/: __init__.py  cli.py  models.py
ci-migrator/schemas/: CircleCIModelSchema.py  GitHubModelSchema.py  ShakModelSchema.py  schema_data.json
tests/: circleci_test.py
tests/test_config/.circleci/: config.yml
